--- a/reportZ.html
+++ b/reportZ.html
@@ -73,7 +73,7 @@
         var model_t;
         loader_t.load('3dmodel/tablet.glb', (gltf) => {
             model_t = gltf.scene;
-            model_t.position.set(0,0,-5);
+            model_t.position.set(0,0,6);
             scene.add(model_t);
         });
         
