--- a/reportZ.html
+++ b/reportZ.html
@@ -166,7 +166,7 @@
           
         //黒い立体
         var parts_g = new THREE.BoxGeometry(4, 4, 4);
-        var parts_m = new THREE.MeshPhongMaterial({ color: 0x000000});
+        var parts_m = new THREE.MeshPhongMaterial({ color: 0xc0c0c0, transparent: true, opacity: 0.9});
         var parts = new THREE.Mesh( parts_g, parts_m);
         parts.scale.set(0.1,0.1,0.1);
         parts.position.set(-0.5,1.6,-3);
