--- a/reportZ.html
+++ b/reportZ.html
@@ -23,7 +23,7 @@
         // レンダラー：シャドウを有効にする
         renderer.shadowMap.enabled = true;
         // 背景の色
-        renderer.setClearColor(0x00ffff);
+        renderer.setClearColor(0xc0c0c0);
 
         // シーンを作成
         const scene = new THREE.Scene();
