--- a/reportZ.html
+++ b/reportZ.html
@@ -288,10 +288,15 @@
             if(parts.scale.x == 0.1){
               scene.add(parts);
             }
-            parts.scale.x += 0.02;
-            parts.scale.y += 0.01;
-            parts.scale.z += 0.01;
-            parts.rotstion.x += 0.05;
+            if(parts.scale.x <= 1.6){
+              parts.scale.x += 0.01;
+              parts.scale.y += 0.01;
+              parts.scale.z += 0.01;
+              parts.rotstion.y += 0.05;
+            } else{
+              parts.scale.x += 0.01;
+              parts.rotstion.x += 0.05;
+            }
           }
           
           if(i >= 4){
