--- a/reportZ.html
+++ b/reportZ.html
@@ -316,7 +316,7 @@
               parts.scale.x += 0.07;
               parts.scale.y += 0.07;
               parts.scale.z += 0.07;
-              parts.rotation.y += 0.05;
+              parts.rotation.x += 0.05;
               if(parts.scale.y >= 10){        
                 scene.remove(laser);
                 scene.remove(parts);  
