--- a/reportZ.html
+++ b/reportZ.html
@@ -292,10 +292,10 @@
               parts.scale.x += 0.01;
               parts.scale.y += 0.01;
               parts.scale.z += 0.01;
-              parts.rotstion.y += 0.05;
+              parts.rotation.y += 0.05;
             } else{
               parts.scale.x += 0.01;
-              parts.rotstion.x += 0.05;
+              parts.rotation.x += 0.05;
             }
           }
           
