--- a/reportZ.html
+++ b/reportZ.html
@@ -320,11 +320,11 @@
                 model.position.set(1,2,-3);
                 scene.add(model);
               });
-              parts.scale.x += 0.07;
-              parts.scale.y += 0.07;
-              parts.scale.z += 0.07;
+              parts.scale.x -= 0.07;
+              parts.scale.y -= 0.07;
+              parts.scale.z -= 0.07;
               
-              if(parts.scale.y >= 10){        
+              if(parts.scale.y <= 0.1){        
                 scene.remove(laser);
                 scene.remove(parts);  
               } 
