--- a/reportZ.html
+++ b/reportZ.html
@@ -309,7 +309,7 @@
             boxb.scale.y += 0.03;
             boxb.scale.z += 0.03;
           }
-          if(boxb.scale.x <= 3){
+          if(boxb.scale.x >= 3){
             if(boxb.position.y >= -3){
               boxb.position.y -= 0.05;
             } else{
