--- a/reportZ.html
+++ b/reportZ.html
@@ -47,11 +47,11 @@
         
         // 箱の柄読み込み
         var textureLoader1 = new THREE.TextureLoader();
-        var texture1 = textureLoader1.load("img/box_p.png");
+        var texture1 = textureLoader1.load("img/box_pp.png");
         var mat_lapis = new THREE.MeshPhongMaterial();
         mat_lapis.map = texture1;       
         // バンプマップ読み込み
-        var bump1 = textureLoader1.load("img/box_p.png");
+        var bump1 = textureLoader1.load("img/box_pp.png");
         mat_lapis.bumpMap = bump1;
         mat_lapis.bumpscale = 0.2;
         
