--- a/reportZ.html
+++ b/reportZ.html
@@ -66,7 +66,7 @@
         var plane = new THREE.Mesh(planeGeometry,mat_y);
         plane.receiveShadow = true;   //影
         plane.rotation.set( -Math.PI/2, 0, 0 );
-        plane.position.set(0,-5,0);
+        plane.position.set(0,-5,-3);
         scene.add(plane);
         
         //3dモデル@shark
