--- a/report4.html
+++ b/report4.html
@@ -137,6 +137,60 @@
         var window = new THREE.Mesh(geometry2, mat3);
         window.position.set(-2,1.4,-1.8); 
         scene.add(window);
+        
+        //蝶
+        //体
+        var body_g = new THREE.SphereGeometry( 0.15, 32, 32 );
+        var mat_w = new THREE.MeshPhongMaterial({ color: 0xffffff });
+        var body = new THREE.Mesh( body_g, mat_w);
+        body.scale.x =0.2;
+        body.scale.y =2;
+        body.scale.z =0.2;
+        body.castShadow = true; 
+        body.position.set(0,0,0);
+
+        //羽
+        const shape = new THREE.Shape();
+        const x = -2.5;
+        const y = -5;
+        shape.moveTo(x + 2.5, y + 2.5);
+        shape.bezierCurveTo(x + 2.5, y + 2.5, x + 2, y, x, y);
+        shape.bezierCurveTo(x - 3, y, x - 3, y + 3.5, x - 3, y + 3.5);
+        shape.bezierCurveTo(x - 3, y + 5.5, x - 1.5, y + 7.7, x + 2.5, y + 9.5);
+        shape.bezierCurveTo(x + 6, y + 7.7, x + 8, y + 4.5, x + 8, y + 3.5);
+        shape.bezierCurveTo(x + 8, y + 3.5, x + 8, y, x + 5, y);
+        shape.bezierCurveTo(x + 3.5, y, x + 2.5, y + 2.5, x + 2.5, y + 2.5);
+        const extrudeSettings = {
+          steps: 2,  // ui: steps
+          depth: 0.01,  // ui: depth
+          //bevelEnabled: true,  // ui: bevelEnabled
+          //bevelThickness: 1,  // ui: bevelThickness
+          //bevelSize: 1,  // ui: bevelSize
+         // bevelSegments: 2,  // ui: bevelSegments
+        };
+        var winggeometry = new THREE.ExtrudeGeometry(shape, extrudeSettings);
+        var wing1 = new THREE.Mesh(winggeometry, mat_w); 
+        wing1.castShadow = true;
+        wing1.position.set(-0.1,0,0);
+        wing1.rotation.z = -1.5;
+        wing1.scale.set(0.06,0.07,0.07);
+        wing1.scale.y = 0.02;
+        //羽２
+        var wing2 = new THREE.Mesh(winggeometry, mat_w); 
+        wing2.castShadow = true;
+        wing2.position.set(0.1,0,0);
+        wing2.rotation.z = 1.5;
+        wing2.scale.set(0.06,0.07,0.07);
+        wing2.scale.y = 0.02;
+
+        var butterfly = new THREE.Group();
+        butterfly.add(wing1);
+        butterfly.add(wing2);
+        butterfly.add(body);
+        butterfly.position.set(-2,0,0);
+        butterfly.rotation.x = 0.7;
+        butterfly.scale.set(0.5,0.5,0.5);
+        scene.add(butterfly);
 
 
         update();
