--- a/report4.html
+++ b/report4.html
@@ -191,7 +191,8 @@
         butterfly.rotation.x = 0.7;
         butterfly.scale.set(0.5,0.5,0.5);
         scene.add(butterfly);
-
+        
+        var x = 1;
 
         update();
 
