--- a/report3.html
+++ b/report3.html
@@ -9,8 +9,8 @@
   本課題:<br>
   1.マウスを用いたカメラの移動ができること<br>
   2.モデルのグループ化を行うこと<br>
-  これらを考慮しながら、ポリゴン２を作成した。<br>
-  (ポリゴン２はポケットモンスターのキャラクターの１匹である)<br>
+  これらを考慮しながら、ポリゴン２(ポケモン)を作成した。<br>
+  全体をグループ化した上で動かして、それとは別で足を動かしている。<br>
  
  <script>
       // ページの読み込みを待つ
