--- a/report2.html
+++ b/report2.html
@@ -16,6 +16,7 @@
   1.立方体や角錐など、様々な図形を表示させること<br>
   2.ワイヤーフレームとサーフェースモデルの両方を表示すること<br>
   3.一つのシーンに複数のオブジェクトを表示すること<br>
+  これらを考慮し、様々な素材で様々な図形を表示し、動かすアニメーションを作成した。<br>
  <script>
   var init = function() {
 
