--- a/report5.html
+++ b/report5.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>ビルボード</title>
+    <title>第５回レポート</title>
     <script src="https://unpkg.com/three@0.137.4/build/three.min.js"></script>
     <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
   </head>
@@ -9,7 +9,8 @@
  <h1>星々</h1>
  本課題:ビルボードを使うこと<br>
  これを踏まえて、ビルボードを利用して複数の星を生成してみた。<br>
- 
+ 一部の星には流れ星をイメージしてアニメーションを追加した。<br>
+ また、フォグ効果を反映した。<br>
  <script>
       // ページの読み込みを待つ
       window.addEventListener('DOMContentLoaded', init);
