--- a/reportZ.html
+++ b/reportZ.html
@@ -1,12 +1,15 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <title>最終レポート</title>
     <script src="https://unpkg.com/three@0.137.4/build/three.min.js"></script>
     <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
     <script src="https://unpkg.com/three@0.137.4/examples/js/loaders/GLTFLoader.js"></script>
   </head>
 <body>
   <h1>pien</h1>
+  今までのレポートの課題内容をできるだけ利用して、10秒程度のアニメーションを作成しようと考えた。<br>
+  
 <script>
       // ページの読み込みを待つ
       window.addEventListener('DOMContentLoaded', init);
