--- a/report4.html
+++ b/report4.html
@@ -14,7 +14,7 @@
 
       function init() {
         // サイズを指定
-        const width = 800
+        const width = 800;
         const height = 600;
 
         // レンダラーを作成
