--- a/report4.html
+++ b/report4.html
@@ -126,7 +126,6 @@
         
         //蝶
         //柄
-        /*
         var textureLoader_p = new THREE.TextureLoader();
         var texture_p = textureLoader_p.load("img/ageha.jpg");
         var mat_p = new THREE.MeshPhongMaterial();
@@ -134,11 +133,11 @@
         var bump_p = textureLoader_p.load("img/ageha.jpg");
         mat_p.bumpMap = bump_p;
         mat_p.bumpscale = 0.4;
-        */
+       
         //体
         var body_g = new THREE.SphereGeometry( 0.15, 32, 32 );
-        var mat_w = new THREE.MeshPhongMaterial({ color: 0xffffff });
-        var body = new THREE.Mesh( body_g, mat_w);
+        //var mat_w = new THREE.MeshPhongMaterial({ color: 0xffffff });
+        var body = new THREE.Mesh( body_g, mat_p);
         body.scale.x =0.2;
         body.scale.y =2;
         body.scale.z =0.2;
@@ -165,14 +164,14 @@
          // bevelSegments: 2,  // ui: bevelSegments
         };
         var winggeometry = new THREE.ExtrudeGeometry(shape, extrudeSettings);
-        var wing1 = new THREE.Mesh(winggeometry, mat_w); 
+        var wing1 = new THREE.Mesh(winggeometry, mat_p); 
         wing1.castShadow = true;
         wing1.position.set(-0.1,0,0);
         wing1.rotation.z = -1.5;
         wing1.scale.set(0.06,0.07,0.07);
         wing1.scale.y = 0.02;
         //羽２
-        var wing2 = new THREE.Mesh(winggeometry, mat_w); 
+        var wing2 = new THREE.Mesh(winggeometry, mat_p); 
         wing2.castShadow = true;
         wing2.position.set(0.1,0,0);
         wing2.rotation.z = 1.5;
