--- a/reportZ.html
+++ b/reportZ.html
@@ -146,7 +146,7 @@
         butterfly.add(body);
         butterfly.position.set(-5,5,0);
         butterfly.rotation.x = 0.7;
-        butterfly.scale.set(0.5,0.5,0.5);
+        //butterfly.scale.set(0.5,0.5,0.5);
         scene.add(butterfly);
         
         
