--- a/reportZ.html
+++ b/reportZ.html
@@ -81,13 +81,13 @@
         var kabe_g = new THREE.BoxGeometry(35, 0.1, 35);
         var plane1 = new THREE.Mesh(kabe_g,mat_ka);
         plane1.receiveShadow = true;  
-        plane1.rotation.set( -Math.PI/2, 1.6, 0 );
+        plane1.rotation.set( -Math.PI/2, 0, 0 );
         plane1.position.set(-17,-3,-5);
         scene.add(plane1);
         
         var plane2 = new THREE.Mesh(kabe_g,mat_ka);
         plane2.receiveShadow = true;  
-        plane2.rotation.set( -Math.PI/2, -1.6, 0 );
+        plane2.rotation.set( -Math.PI/2,0, 0 );
         plane2.position.set(17,-3,-5);
         scene.add(plane2);
         
