--- a/reportZ.html
+++ b/reportZ.html
@@ -74,7 +74,7 @@
         
         //壁
         var textureLoader_ka = new THREE.TextureLoader();
-        var texture_ka = textureLoader_ka.load("img/konkuri.jpg");
+        var texture_ka = textureLoader_ka.load("img/kabe.png");
         var mat_ka = new THREE.MeshPhongMaterial();
         mat_ka.map = texture_ka;  
         
