--- a/reportZ.html
+++ b/reportZ.html
@@ -91,7 +91,7 @@
         plane2.position.set(17,-1,-5);
         scene.add(plane2);
         
-        var plane3 = new THREE.Mesh(planeGeometry,mat_ka);
+        var plane3 = new THREE.Mesh(kabe_g,mat_ka);
         plane3.receiveShadow = true;  
         plane3.rotation.set( 1.6, 0, 0 );
         plane3.position.set(0,-1,-15);
