--- a/reportZ.html
+++ b/reportZ.html
@@ -80,7 +80,7 @@
         var model;
         
         
-        // 星をスプライトで作成
+        // 最後の文字
         var textureLoader2 = new THREE.TextureLoader();  
         var texture2 = textureLoader2.load("img/sharkmozi.png");
         const material = new THREE.SpriteMaterial({ map: texture2,});
