--- a/reportZ.html
+++ b/reportZ.html
@@ -321,12 +321,12 @@
             }
           }
           
-          if(a >= 1.9 && mozi.scale.x <= 7){
+          if(a >= 1.9 && mozi.scale.y <= 7){
             if(mozi.scale.x == 0.01){
               scene.add(mozi);
             }
-            mozi.scale.x += 0.1;
-            mozi.scale.y += 0.15;
+            mozi.scale.x += 0.2;
+            mozi.scale.y += 0.1;
             mozi.scale.z += 0.1;
           }
          
