--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         CG作品集：
         <ul>
             <li><a href="report2.html">様々な図形の表示</a>（第２回レポート）</li>
-            <li><a href="report3.html">CGで作ったポリゴン２</a>（第３回レポート）</li>
+            <li><a href="report3.html">ポリゴン２</a>（第３回レポート）</li>
             <li><a href="report4.html">テクスチャーマップ</a>（第４回レポート）</li>
             <li><a href="report5.html">ビルボード</a>（第５回レポート）</li>
-            <li><a href="reportZ.html">lpis</a>（最終レポート）</li>
+            <li><a href="reportZ.html">create SharkModel</a>（最終レポート）</li>
         </ul>
     </p>
 </body>
