--- a/reportZ.html
+++ b/reportZ.html
@@ -9,7 +9,7 @@
 <body>
   <h1>create SharkModel</h1>
   今までのレポートの課題内容をできるだけ利用して、10秒程度のアニメーションを作成しようと考えた。<br>
-  初めに出現する画面をもとにサメを作成するというコンセプトのアニメーション。<br>
+  初めに出現する画面をもとにサメのモデルを作成するというコンセプトのアニメーション。<br>
   一度壁なども作成したが、読み込み時間が長くなってしまったためなくした。<br>
 <script>
       // ページの読み込みを待つ
